fix border overflow in product grid

--- a/app/accessories/[category]/[handle]/accessory.module.scss
+++ b/app/accessories/[category]/[handle]/accessory.module.scss
@@ -3,6 +3,7 @@
   background-color: var(--white);
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
 }
 
 .main {
